compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__let_assert__pattern_let.snap
---
source: compiler-core/src/erlang/tests/let_assert.rs
expression: "pub fn go(x) {\n  let assert [1 as a, b, c] = x\n  [a, b, c]\n}"
---
----- SOURCE CODE
pub fn go(x) {
  let assert [1 as a, b, c] = x
  [a, b, c]
}

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([go/1]).

-file("project/test/my/mod.gleam", 1).
-spec go(list(integer())) -> list(integer()).
go(X) ->
    {A@1, B@1, C@1} = case X of
    [1 = A, B, C] -> {A, B, C};
    _assert_fail ->
        erlang:error(#{gleam_error => let_assert,
                    message => <<"Pattern match failed, no pattern matched the value."/utf8>>,
                    file => <<?FILEPATH/utf8>>,
                    module => <<"my/mod"/utf8>>,
                    function => <<"go"/utf8>>,
                    line => 2,
                    value => _assert_fail,
                    start => 17,
                    'end' => 46,
                    pattern_start => 28,
                    pattern_end => 42})
end,
[A@1, B@1, C@1].
