compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__let_assert__string_pattern.snap
---
source: compiler-core/src/erlang/tests/let_assert.rs
expression: "pub fn go() {\n  let assert \"Hello!\" = \"Hel\" <> \"lo!\"\n}"
---
----- SOURCE CODE
pub fn go() {
  let assert "Hello!" = "Hel" <> "lo!"
}

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([go/0]).

-file("project/test/my/mod.gleam", 1).
-spec go() -> binary().
go() ->
    _assert_subject = <<"Hel"/utf8, "lo!"/utf8>>,
case _assert_subject of
    <<"Hello!"/utf8>> -> _assert_subject;
    _assert_fail ->
        erlang:error(#{gleam_error => let_assert,
                    message => <<"Pattern match failed, no pattern matched the value."/utf8>>,
                    file => <<?FILEPATH/utf8>>,
                    module => <<"my/mod"/utf8>>,
                    function => <<"go"/utf8>>,
                    line => 2,
                    value => _assert_fail,
                    start => 16,
                    'end' => 52,
                    pattern_start => 27,
                    pattern_end => 35})
end.
